# file-manipulator

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
base/: __init__.py  utils.py
base/components/: file.py
base/components/doc/: comments.py  page.py
base/components/ppt/: author.py  comments.py
base/data/: __init__.py
base/data/components/: __init__.py  doc.py  ppt.py
base/data/exceptions/: __init__.py  functions.py
base/data/exceptions/ppt/: presentation.py  shapes.py
base/data/misc/: file.py  language.py
base/data/namespaces/: __init__.py  docx.py  pptx.py
base/data/namespaces/docx/: __init__.py
base/editors/: __init__.py  archive.py
base/editors/doc/: document.py
base/editors/ppt/: presentation.py  shape.py  slide.py
base/models/: parsers.py
base/namespaces/docx/: __init__.py
base/parsers/: file.py
base/parsers/doc/: comments.py  page.py
base/parsers/ppt/: author.py  comments.py
base/tools/: crypt.py  ppt.py  strings.py  xml.py  xmls.py
testing/: NO ISSUE.pptx  empty.pptx  hash_test.py  manual_comments.pptx  new_original.pptx  runner.py  test.pptx  test2.pptx
testing/big_test_1/: [Content_Types].xml
testing/big_test_1/docProps/: app.xml  core.xml
testing/big_test_1/ppt/: authors.xml  presentation.xml  viewProps.xml
testing/big_test_1/ppt/_rels/: presentation.xml.rels
testing/big_test_1/ppt/comments/: modernComment_100_0.xml
testing/big_test_1/ppt/fonts/: font1.fntdata  font10.fntdata  font19.fntdata  font2.fntdata  font23.fntdata  font25.fntdata  font26.fntdata  font27.fntdata  (+13 more)
testing/issues/empty_comments/: ISSUE.pptx
testing/rapid_tests/: algorithms1.ppt  algorithms2.ppt  algorithms3.pptx  algorithms33.pptx  algorithms4.ppt  oil.pptx  rapid_testing.py
testing/test/: [Content_Types].xml
testing/test/docProps/: app.xml  core.xml
testing/test/ppt/: authors.xml  presentation.xml  tableStyles.xml  viewProps.xml
testing/test_doc/: [Content_Types].xml
testing/test_doc/docProps/: app.xml  core.xml
testing/test_doc/ppt/: presentation.xml  viewProps.xml
(+1515 files in other folders)
