[tool.poetry]
name = "base"
version = "0.1.0"
description = ""
authors = ["Mohammad Malkawi <mohammad.o.malkawi@gmail.com>", "Anzor Naghawi <anzor.naghawi@pwc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
gunicorn = "^23.0.0"
uvicorn = "^0.32.0"
python-pptx = "^1.0.2"
psycopg2-binary = "^2.9.10"
pyhumps = "^3.8.0"
python-multipart = "^0.0.17"
uuid6 = "^2024.7.10"
azure-ai-documentintelligence = "^1.0.0b4"
pymupdf = "^1.24.14"
pypdf2 = "^3.0.1"
poetry-plugin-export = "^1.8.0"
pypdf = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pre-commit = "^3.4.0"
ruff = "^0.0.287"

[tool.ruff]
ignore = ["E501"]

[tool.black]
line-length = 88

[tool.isort]
profile = 'black'